--- a/protocolo/capitulos/portada.tex
+++ b/protocolo/capitulos/portada.tex
@@ -25,7 +25,7 @@ Departamento de Ingeniería Eléctrica y Computación
 
 Protocolo de investigación presentado por:\\
 \vspace{6mm}
-\theauthor\hspace{10mm} [Matrícula]\\
+\theauthor\hspace{10mm} 157851\\
 \vspace{10mm}
 Requisito para la obtención del título de\\
 \vspace{6mm}
@@ -33,7 +33,7 @@ INGENIERO EN SISTEMAS COMPUTACIONALES\\
 \vspace{10mm}
 
 Asesor:\\
-{[Nombre del asesor]}\\
+{M. en C. José Saúl Gonzalez Campos}\\
 } \vfill
 	Ciudad Juárez, Chihuahua \hspace{70mm}\today
 
