--- a/protocolo/capitulos/intro.tex
+++ b/protocolo/capitulos/intro.tex
@@ -1,5 +1,15 @@
-\section{Introducción}
-Indique de forma clara y coherente en una cuartilla cuál es la nueva contribución, su importancia y por qué es adecuado para sistemas computacionales. 
-Se sugiere para su redacción seguir los cinco pasos siguientes: 1) Establezca el campo de investigación al que pertenece el proyecto, 2) describa 
-los aspectos del problema más que ya han sido estudiado por otros investigadores, 3) explique el área de oportunidad que pretende cubrir el proyecto 
-propuesto, 4) describa el propósito/objetivo del proyecto y 5) proporcione el valor positivo o la justificación para llevar a cabo el proyecto.
+\section*{Introducción}
+
+"La agricultura es la base de la economía en muchos países, esta provee a la humanidad de algunas de sus necesidades más básicas: comida y fibra" \cite{appsremotesensing}. La demanda de comida y productos derivados de la agricultura está proyectada a incrementar en un 70\% para el año 2050 \cite{wik_pingali_brocai_2008}. La agricultura de precisión (PA por sus siglas en inglés) es clave para poder alcanzar la agricultura sustentable. La PA se puede definir como una estrategia de manejo que implementa la recopilación de información, comunicación entre sistemas y técnicas de análisis de datos para apoyar la toma de decisiones, por ejemplo: aplicación de fertilizantes, control de plagas, control de riego, identificación de enfermedades, entre otros \cite{appsremotesensing}.
+
+Actualmente existen varios sistemas en el mercado para el control y monitoreo de invernaderos o cuartos de producción. Los sistemas básicos ofrecen monitoreo de temperatura, humedad, CO2, e intensidad de la luz, con un costo de \$2,159.90 USD y \$2,351.00 USD respectivamente \cite{intelliclimate_kit_2021}, \cite{smartbee_kit_2021}. Ambos sistemas se pueden conectar a internet para realizar un monitoreo remoto, alertar cuando las condiciones salgan de los límites definidos e iniciar las acciones correctivas correspondientes, sin embargo, \cite{intelliclimate_kit_2021} necesitará una interfaz y una subscripción extra, añadiendo \$279.00 USD al costo. 
+
+Existen otras alternativas, sin embargo, estas ofrecen un servicio similar excepto a escala industrial \cite{ceres_greenhouse_solutions_2021}, \cite{autogrow_climate_control_2021}, \cite{climate_control_2021}. Debido a su mercado objetivo, estos sistemas industriales solo ofrecen cotizaciones a clientes potenciales.
+
+En junio de 2020 se realizó una encuesta (\ref{encuesta}) en la que participó un grupo de agricultores de escala pequeña y mediana, ubicados en Samalayuca, Chihuahua. El 87.6\% de los sondeados no cuentan con un sistema de riego automatizado. Al 76.1\% les gustaría un sistema de ventilación automatizado. Los primeros tres parámetros que se consideraron más importantes de monitorear fueron los siguientes: temperatura del ambiente, humedad del ambiente y la humedad del suelo. Al 84.1\% les gustaría controlar y monitorear sus cultivos desde su teléfono o computadora, sin embargo, casi el 90\% de los encuestados no están dispuestos a adquirir un sistema a costo del mercado.
+
+%FIXME: agregar un parrafo intermedio
+
+La comunicación inalámbrica entre sistemas ha cambiado los estándares de comunicación al día de hoy y la agricultura no se ha quedado atrás. "Para incrementar la eficiencia, productividad y reducir la intervención humana, tiempo y costo existe una necesidad de prestar atención a una nueva tecnología llamada Internet de las Cosas (\textit{IoT} por sus siglas en inglés)" \cite{agriculture_automation_review}. El IoT es la red de dispositivos que adquieren y actúan sobre información sin la necesidad de que un humano intervenga \cite{agriculture_automation_review}. 
+
+Los principales componentes de un sistema basado en \textit{IoT} se pueden dividir en 4 capas: dispositivos, red, servicios y aplicación. El \textit{hardware} a implementar es de suma importancia debido a que impacta directamente el costo de la implementación y restringe las tecnologías disponibles. Entre los dispositivos más utilizados están los diferentes Arduinos, Raspberry Pis y el microcontrolador ESP. Los datos obtenidos a través de estos dispositivos son (en su mayoría) enviados a una ubicación central a través de una red alámbrica o inalámbrica. Los principales protocolos de red implementados en las redes inalámbricas son: Wi-Fi, Bluetooth, Zigbee y LoRaWAN \cite{systematicreviewiot}. 
