--- a/protocolo/capitulos/actividades.tex
+++ b/protocolo/capitulos/actividades.tex
@@ -1,117 +1,47 @@
 \section{Programa de Actividades}
-
-[Describe las actividades a realizar y señala los meses necesarios para el logro de las metas establecidas.
-Es un listado que muestra la secuencia de acciones, relacionadas con la metodología, que se prevé llevar a cabo, la duración que tendrán y las fechas en que ocurrirán, demostrando siempre que terminarás en tiempo y forma.]
-
-
-%Agregar dos oraciones a los parrafos
-[De acuerdo a la metodología planteada, se organizan las actividades en base a un periodo de dos semestres correspondientes a la duración del proyecto, cada tarea particular tiene un tiempo aproximado que permita llegar al objetivo de la investigación.
-A continuación se muestra un cronograma de actividades como ejemplo. 
-Además, vale la pena mencionar que existen varios portales en la web donde puedes construir tu tabla \LaTeX de una manera visual, y luego generas y copias el código fuente de la tabla terminada y con estilo a tu documento. Uno de dichos portales es \url{http://www.tablesgenerator.com}]
-
-\begin{table}
-\centering
-\resizebox*{!}{10 cm}{
-\begin{tabular}{|p{4cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c}
-	\hline 
-	&\rotatebox{90}{Agosto 2016}
-	&\rotatebox{90}{Septiembre 2016}
-	&\rotatebox{90}{Octubre 2016} &\rotatebox{90}{Noviembre 2016} &\rotatebox{90}{Diciembre 2016} &\rotatebox{90}{Enero 2017} &\rotatebox{90}{Febrero 2017} &\rotatebox{90}{Marzo 2017} &\rotatebox{90}{Abril 2017} &\rotatebox{90}{Mayo 2017} &\rotatebox{90}{Junio 2017}
-	&\rotatebox{90}{Julio 2017}
-	&\rotatebox{90}{Agosto 2017}
-	&\rotatebox{90}{Septiembre 2017}
-	&\rotatebox{90}{Octubre 2017}
-	&\rotatebox{90}{Noviembre 2017}
-	&\rotatebox{90}{Diciembre 2017}
-	&\rotatebox{90}{Enero 2018}
-	&\rotatebox{90}{Febrero 2018}
-	&\rotatebox{90}{Marzo 2018}
-	&\rotatebox{90}{Abril 2018}
-	&\rotatebox{90}{Mayo 2018}
-	&\rotatebox{90}{Junio 2018}\\
-	\hline
-	
-	Revisión del estado de la técnica&\checkmark 
-	&\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\  
-	\hline 
-	Selección de la plataforma donde funcionará la aplicación&  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Investigación y aprendizaje de ASP, autómatas a pila y gramáticas&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Documentación de propuesta&  &  &  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark\\ 
-	\hline 
-	Búsqueda de opciones para reconocimiento de voz&  &  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Determinar la herramienta para reconocimiento de voz&  &  &  &  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Integración del modulo de reconocimiento de voz&  &  &  &  &  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline 
-	Pruebas del módulo de reconocimiento de voz&  &  &  &  &  &  &  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline  
-	Evaluar Freeling y OpenNLP como herramientas para el procesado del lenguaje natural&  &  &  &  &  &  &  &  &\checkmark  &  &  &  &  &  &  &  &  &  &  &  &  &  &\\ 
-	 \hline 
-	Análisis módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &  &  &  &  &  &  &\\ 
-	\hline
-	Diseño de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  & \checkmark &\checkmark  &\checkmark  &  &  &  &  &  &  &  &\\ 
-	\hline  
-	Codificación de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  &  &\\ 
-	\hline  
-	Pruebas de módulo de procesado de lenguaje natural&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &\checkmark  &  &  &  &\\ 
-	\hline  
-	Análisis, diseño, codificación y pruebas de las interfaces visuales&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &\checkmark  &\checkmark  &  &\\ 
-	\hline 
-	Integración de los módulos para del prototipo.&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &  &  &\checkmark  &\\ 
-	\hline
-	Pruebas de integración y pruebas funcionales del prototipo.&  &  &  &  &  &  &  &  &   &  &  &  &  &  &  &  &  &  &  &  &  &  &\checkmark\\ 
-	\hline
-	
-\end{tabular}
-}
-    \caption{Actividades a 24 meses}
-    \label{xx}
-\end{table}
-
-
-[A continuación mostramos otro ejemplo:]
-
 \begin{table}[h]
     \centering
-\resizebox*{!}{8 cm}{
-\begin{tabular}{|p{6cm}|c|c|c|c|c|c|c|c|c|}
+\resizebox*{!}{12 cm}{
+\begin{tabular}{|p{8cm}|c|c|c|c|c|c|c|c|c|c|}
 	\hline 
-	ACTIVIDAD&\rotatebox{90}{Febrero 2018}
+	ACTIVIDAD&\rotatebox{90}{Febrero 2021}
 	&\rotatebox{90}{Marzo}
 	&\rotatebox{90}{Abril} 
     &\rotatebox{90}{Mayo} 
-    &\rotatebox{90}{VACACIONES} 
+    &\rotatebox{90}{Junio} 
+    &\rotatebox{90}{Julio} 
     &\rotatebox{90}{Agosto} 
     &\rotatebox{90}{Septiembre} 
     &\rotatebox{90}{Octubre} 
-    &\rotatebox{90}{Noviembre 2018}\\
+    &\rotatebox{90}{Noviembre 2021}\\
 	\hline
-	Revisión de la Literatura&\checkmark 
-	&\checkmark  &\checkmark  &  &  &  &  & &  \\  
+	Revisión de la Literatura&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
 	\hline
-	Protocolo&\checkmark 
-	&\checkmark  &\checkmark  &  &  &  &  & &  \\  
+	Protocolo&\checkmark &\checkmark  &\checkmark  &  &  &  &  &  & &  \\  
 	\hline 
-	Selección de software existente&  &  &  &\checkmark  &\checkmark  &\checkmark  &  &  &  \\ 
+	Selección de software existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
 	\hline 
-	Investigación y aprendizaje de Fuzzy Answer Sets&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  & \\ 
+	Selección de hardware existente&\checkmark &\checkmark  &  &  &  &  &  &  & &  \\  
 	\hline 
-	Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
+	Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
 	\hline 
-	Formulación de semántica para razonamiento difuso&  &  &  &  &\checkmark  &\checkmark  &  &  &  \\ 
+	Diseño, desarrollo e implementación de la red inalámbrica&  &  &  & \checkmark & \checkmark  &  &  &  &  &  \\ 
 	\hline 
-	Evaluación de software existente&  &  & \checkmark &  &  &  &  &  &  \\ 
-    \hline
-	Codificación de prototipo&  &  &  &  & \checkmark & \checkmark &  &  &   \\ 
+	Desarrollo e implementación del API de la computadora central&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+	\hline 
+	Desarrollo e implementación del API del servidor en la nube&  &  &  &  &  & \checkmark  &  &  &  &  \\ 
+	\hline 
+	Investigación y aprendizaje de Lógica difusa&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  & \\ 
+	\hline 
+	Formulación de semántica para razonamiento difuso&  &  &  &  &  &\checkmark  &  &  &  &  \\ 
+	\hline 
+	Automatización del control mediante técnicas de lógica difusa&  &  &  &  &  &  \checkmark & \checkmark &  &  &  \\ 
 	\hline  
-	Pruebas de prototipo&  &  &  &  &  &  & \checkmark &  &   \\ 
-	\hline 
-	Presentación y defensa de trabajo&  &  &  &  &  &  &  &  & \checkmark  \\ 
+	Diseño y desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  & \checkmark & \checkmark &  \\ 
+	\hline  
+	Presentación y defensa de trabajo&  &  &  &  &  &  &  &  &  & \checkmark  \\ 
 	\hline
 \end{tabular}}
-    \caption{Actividades a nueve meses}
-    \label{nueve}
+	\label{nueve}
+    \caption{Actividades a diez meses}
 \end{table}
