--- a/protocolo/capitulos/metodologia.tex
+++ b/protocolo/capitulos/metodologia.tex
@@ -1,17 +1,31 @@
 \section{Metodología}
 
-Modelo en cascada
+Para el desarrollo de este proyecto se utilizará la metodología ágil. La ventaja de utilizar esta estrategia de desarrollo sobre otras metodologías lineales (como la metodología de casacada) es que soporta el trabajo simultáneo de varias etapas del desarrollo de software. Esta permite diseñar, desarrollar y probar en pequeños ciclos iterativos hasta que se esté contento con la funcionalidad. Además, el principal objetivo de esta metodología es la entrega de pequeñas partes del proyecto que se complementen entre si \cite{what_is_agile_meth}. Este proyecto se dividirá en los siguientes entregables:
 
-Análisis 
-    - Los parámetros que les importan a los agricultores los puedo sacar de unas encuestas
-Diseño
-    - Agregar imágenes de los sensores y agregar diagramas de la arquitectura que tendrá el sistema
-Implementación
-    - El microcontrolador se programará en Arduino, los datos se enviarán a través de HTTP
-    - En el rapberry puedo usar python (dependerá de las librerías de lógica difusa)
-    - En el servidor en la nube se utilizará un api en nodejs y se guardarán los datos en Mongo
-    - Para el front se va a utilizar Vuejs, el cual consultará los datos al API en la nube (se va a usar NGINX como servidor web)
+\begin{itemize}
+    \item \textbf{Diseño, desarrollo e implementación de la redinalámbrica}
+    
+    \item \textbf{Desarrollo e implementación del API de la computadora central}
+    \item \textbf{Desarrollo e implementación del API del ser-vidor en la nube}
+    \item \textbf{Automatización del control mediante técni-cas de lógica difusa}
+    \item \textbf{Diseño y desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota}
+\end{itemize}
 
-    - 
+
+
+
+% Modelo en cascada
+
+% Análisis 
+%     - Los parámetros que les importan a los agricultores los puedo sacar de unas encuestas
+% Diseño
+%     - Agregar imágenes de los sensores y agregar diagramas de la arquitectura que tendrá el sistema
+% Implementación
+%     - El microcontrolador se programará en Arduino, los datos se enviarán a través de HTTP
+%     - En el rapberry puedo usar python (dependerá de las librerías de lógica difusa)
+%     - En el servidor en la nube se utilizará un api en nodejs y se guardarán los datos en Mongo
+%     - Para el front se va a utilizar Vuejs, el cual consultará los datos al API en la nube (se va a usar NGINX como servidor web)
+
+%     - 
 
 
