--- a/protocolo/capitulos/propuesta_solucion.tex
+++ b/protocolo/capitulos/propuesta_solucion.tex
@@ -2,8 +2,8 @@
 
 Se desarrollará un sistema de bajo costo para monitorear y controlar el clima de un invernadero a través de técnicas de lógica difusa.
 
-El monitoreo se basará en una red inalámbrica de sensores. Esta red estará compuesta de una computadora central y nodos que realizarán las lecturas de cada sensor y le enviarán los datos a través de Wi-Fi. Esta computadora estará encargada de actuar como punto de acceso para todos los nodos, siendo la única con conexión a internet. Existirán 2 variantes de nodos. Ambas variantes contarán con un microcontrolador NodeMCU-ESP8266, el cual estará encargado de sensar un sensor de temperatura y humedad (DHT11), un sensor de luminosidad (Adafruit 4162 VEML7700) y, dependiendo de la variante, un sensor capacitivo de humedad del suelo. Los nodos estarán dispersos uniformemente dentro del invernadero, los que cuenten con sensor de humedad del suelo estarán a nivel del suelo, para poder utilizar efectivamente este sensor. Los que no, estarán a una altura en la que el cultivo no cubra el sensor de luminosidad (esta dependerá del cultivo a monitorear). 
+El monitoreo se basará en una red inalámbrica de sensores. Esta red estará compuesta de una computadora central y nodos que realizarán las lecturas de cada sensor y le enviarán los datos a través de Wi-Fi. Esta computadora estará encargada de actuar como punto de acceso para todos los nodos, siendo la única con conexión a internet. Existirán 2 variantes de nodos. Ambas variantes contarán con un microcontrolador NodeMCU-ESP8266, el cual estará encargado de sensar un sensor de temperatura y humedad (DHT11), un sensor de intensidad de luz (Adafruit 4162 VEML7700) y, dependiendo de la variante, un sensor capacitivo de humedad del suelo. Los nodos estarán dispersos uniformemente dentro del invernadero, los que cuenten con sensor de humedad del suelo estarán a nivel del suelo, para poder utilizar efectivamente este sensor. Los que no, estarán a una altura en la que el cultivo no cubra el sensor de iluminancia (esta dependerá del cultivo a monitorear). 
 
-La computadora central será un \textit{raspberry pi} 4, estará encargada de recibir los datos, procesarlos, filtrarlos y enviarlos a un servidor en la nube. En esta computadora también se realizará el control difuso, tomando decisiones a partir de las lecturas de sensores realizadas por los nodos y de las reglas heurísticas previamente definidas. Este control podrá ser sobre escrito a través de la interfaz de usuario, conservando así total control sobre el sistema.
+La computadora central será un \textit{raspberry pi} 4, estará encargada de recibir los datos, procesarlos, filtrarlos y enviarlos a un servidor en la nube. En esta computadora también se realizará el control difuso del riego y del clima, tomando decisiones a partir de las lecturas de sensores realizadas por los nodos y de las reglas heurísticas previamente definidas. Este control podrá ser sobre escrito a través de la interfaz de usuario, conservando así total control sobre el sistema.
 
 En el servidor alojado en la nube se encontrará una interfaz para programas de aplicación (API por sus siglas en inglés) codificada en NodeJS. Esta se encargará de recibir los datos enviados por la computadora central del invernadero y guardarlos en una instancia de MongoDB. Estos datos serán los que el usuario podrá monitorear en la interfaz, así como realizar el control remoto a través de un túnel inverso SSH.
