--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -36,8 +36,8 @@
 \input{capitulos/justificacion}
 \input{capitulos/propuesta_solucion}
 \include{capitulos/marco_teorico}
-% \include{capitulos/alcance}
-% \include{capitulos/metodologia}
+\include{capitulos/alcance}
+\include{capitulos/metodologia}
 \include{capitulos/actividades}
 
 \bibliography{referencias}
