--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -1,3 +1,11 @@
+@misc{what_is_agile_meth,
+author = "{Red Hat}",
+title = {{What is agile methodology}},
+howpublished = {\url{https://www.redhat.com/en/topics/devops/what-is-agile-methodology}},
+note = {Online; accessed April 10, 2021},
+year = {2021}
+}
+
 @misc{intelliclimate_kit_2021,
 author = "{Autogrow}",
 title = {{Intelliclimate Kit}},
