--- a/protocolo/capitulos/actividades.tex
+++ b/protocolo/capitulos/actividades.tex
@@ -1,7 +1,10 @@
 \section{Programa de Actividades}
-\begin{table}[h]
+Las actividades, con sus tiempos respectivos, para llevar a cabo este proyecto se encuentran detalladas en el Cuadro \ref{actividades}.
+
+\begin{table}[ht]
+	\label{actividades}
     \centering
-\resizebox*{!}{12 cm}{
+\resizebox*{!}{17 cm}{
 \begin{tabular}{|p{8cm}|c|c|c|c|c|c|c|c|c|c|}
 	\hline 
 	ACTIVIDAD&\rotatebox{90}{Febrero 2021}
@@ -25,23 +28,38 @@
 	\hline 
 	Documentación de propuesta&  &  & \checkmark & \checkmark &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &\checkmark  \\ 
 	\hline 
-	Diseño, desarrollo e implementación de la red inalámbrica&  &  &  & \checkmark & \checkmark  &  &  &  &  &  \\ 
+	Diseño de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
 	\hline 
-	Desarrollo e implementación del API de la computadora central&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+	Desarrollo de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
 	\hline 
-	Desarrollo e implementación del API del servidor en la nube&  &  &  &  &  & \checkmark  &  &  &  &  \\ 
+	Pruebas de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
 	\hline 
-	Investigación y aprendizaje de Lógica difusa&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  & \\ 
+	Implementación de la red inalámbrica&  &  &  & \checkmark &  &  &  &  &  &  \\ 
+	\hline 
+	Desarrollo del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+	\hline 
+	Pruebas del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+	\hline 
+	Implementación del API REST de la computadora central&  &  &  &  & \checkmark  &  &  &  &  &  \\ 
+	\hline 
+	Desarrollo del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+	\hline 
+	Pruebas del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+	\hline 
+	Implementación del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
+	\hline 
+	Investigación y aprendizaje sobre Lógica difusa&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  & \\ 
 	\hline 
 	Formulación de semántica para razonamiento difuso&  &  &  &  &  &\checkmark  &  &  &  &  \\ 
 	\hline 
-	Automatización del control mediante técnicas de lógica difusa&  &  &  &  &  &  \checkmark & \checkmark &  &  &  \\ 
+	Automatización del control mediante técnicas de lógica difusa&  &  &  &  &  &  &  \checkmark & \checkmark &  &  \\ 
 	\hline  
-	Diseño y desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  & \checkmark & \checkmark &  \\ 
+	Diseño de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark  &  \\ 
+	\hline  
+	Desarrollo de aplicación web para monitorear y controlar el invernadero de forma remota&  &  &  &  &  &  &  &  & \checkmark &  \\ 
 	\hline  
 	Presentación y defensa de trabajo&  &  &  &  &  &  &  &  &  & \checkmark  \\ 
 	\hline
 \end{tabular}}
-	\label{nueve}
     \caption{Actividades a diez meses}
 \end{table}
