--- a/protocolo/capitulos/objetivos.tex
+++ b/protocolo/capitulos/objetivos.tex
@@ -4,8 +4,8 @@ Desarrollar un sistema de bajo costo para controlar y monitorear el clima de un 
 \subsection{Objetivos específicos}
 \begin{itemize}
 	\item Diseñar, desarrollar e implementar una red inalámbrica de sensores de bajo costo para monitorear el clima de un invernadero.
-	\item Desarrollar un API para filtar y enviar los datos obtenidos de los sensores a la nube.
-	\item Desarrollar un API para recibir y guardar los datos enviados por la computadora central.
+	\item Desarrollar un API REST para filtar y enviar los datos obtenidos de los sensores a la nube.
+	\item Desarrollar un API REST para recibir y guardar los datos enviados por la computadora central.
 	\item Automatizar el control del invernadero utilizando técnicas de lógica difusa.
 	\item Diseñar una interfaz gráfica para monitorear y controlar el clima del mismo de forma remota.
 \end{itemize}
