--- a/protocolo/capitulos/alcance.tex
+++ b/protocolo/capitulos/alcance.tex
@@ -1,15 +1,12 @@
 \section{Alcances y limitaciones}
 
-% [Los alcances nos indican con precisión qué SÍ se puede esperar o cuáles aspectos alcanzaremos en el desarrollo del proyecto; y las limitaciones indican qué aspectos quedan fuera de su cobertura, lo que NO se realizará. 
-% En otras palabras, los alcances son las condiciones bajo las cuales tu producto deberá funcionar; y las limitaciones son las condiciones que no cubrirá.]
-
 \subsection*{Alcances}
 \begin{itemize}
     \item El sistema monitoreará la temperatura y humedad ambiental, la humedad del suelo y la intensidad de la luz dentro de un invernadero.
     \item Se controlará el riego utilizando una válvula de solenoide y el clima a través de abanicos y aspersores de niebla. 
     \item Los datos recabados por el monitoreo serán guardados en una base de datos.
     \item Estos datos podrán ser monitoreados y controlados en tiempo real a través de una interfaz web.
-    \item test
+    \item En la interfaz, se podrán consultar datos históricos sobre las mediciones
 \end{itemize}
 
 \subsection*{Limitaciones}
